--- a/index.html
+++ b/index.html
@@ -3,11 +3,74 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Spincy Quincy</title>
+  <title>Welcome to Spincy Quincy</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #fff8f0;
+      color: #333;
+    }
+    header {
+      background-color: #e12c2c;
+      color: white;
+      padding: 30px 20px;
+      text-align: center;
+    }
+    .hero {
+      padding: 40px 20px;
+      text-align: center;
+    }
+    .hero img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+    .hero h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+    .hero p {
+      font-size: 1.2em;
+      max-width: 800px;
+      margin: 0 auto;
+    }
+    footer {
+      background: #222;
+      color: #eee;
+      text-align: center;
+      padding: 15px;
+      font-size: 0.9em;
+    }
+  </style>
 </head>
-<body style="font-family: sans-serif; text-align: center; padding: 50px;">
-  <h1>Welcome to Spincy </h1>
-  <p>Authentic Chicken Döner(Gyro) – Fresh, Fast, Flavorful.</p>
-  <p>Website coming soon...</p>
+<body>
+
+  <header>
+    <h1>Welcome to Spincy</h1>
+    <p>Authentic Chicken Döner (Gyro) – Fresh, Fast, Flavorful.</p>
+  </header>
+
+  <section class="hero">
+    <img src="https://images.unsplash.com/photo-1605478371364-0f82466d26ba" alt="Döner Wrap">
+    <h1>Our Story</h1>
+    <p>
+     
+  At Spincy, we believe food is more than fuel — it’s a shared experience, a memory in the making.
+  Our passion for chicken döner is rooted in the rich, diverse streets of Istanbul, where flavor brings people together across cultures and generations.
+  That same spirit lives here in Quincy, where we serve bold, fire-roasted chicken wraps crafted with care, warmth, and just the right spice.
+  <br><br>
+  Whether you’re grabbing a quick bite or sitting down with friends, we’re here to turn everyday meals into flavorful moments.
+  Because at Spincy, it’s not just about what’s on the plate — it’s about the feeling it brings.
+
+    </p>
+  </section>
+
+  <footer>
+    © 2025 Spincy Quincy. All rights reserved.
+  </footer>
+
 </body>
 </html>
