--- a/index.html
+++ b/index.html
@@ -68,6 +68,22 @@
     </p>
   </section>
 
+  <section class="hero" style="background:#fdf4f4; padding-top: 0;">
+  <h1>Our Mission</h1>
+  <p>
+    At Spincy, our mission goes beyond serving great food — we want to nourish our community in every sense.
+    Inspired by the Turkish tradition of <strong>"askıda ekmek"</strong>, we’ve launched the <strong>“Wrap It Forward”</strong> program:
+    a simple way for customers to donate a meal for someone in need.
+    <br><br>
+    Whether you donate $1 or cover an entire wrap, your kindness goes directly to feeding someone who could use a warm, delicious meal.
+    <br><br>
+    Because at Spincy, we believe food is a human right — and when we share it, we bring hope, dignity, and connection.
+  </p>
+</section>
+<br>
+<a href="#" style="background:#e12c2c;color:white;padding:12px 25px;text-decoration:none;border-radius:6px;display:inline-block;margin-top:15px;">Donate a Meal</a>
+
+
   <footer>
     © 2025 Spincy Quincy. All rights reserved.
   </footer>
