--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Welcome to Spincy Quincy</title>
+  <title>Spincy Quincy</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -37,6 +37,29 @@
       max-width: 800px;
       margin: 0 auto;
     }
+    .mission {
+      background-color: #fdf4f4;
+      padding: 40px 20px;
+      text-align: center;
+    }
+    .mission h1 {
+      font-size: 2.3em;
+      margin-bottom: 10px;
+    }
+    .mission p {
+      font-size: 1.1em;
+      max-width: 800px;
+      margin: 0 auto;
+    }
+    .mission a {
+      background-color: #e12c2c;
+      color: white;
+      padding: 12px 25px;
+      text-decoration: none;
+      border-radius: 6px;
+      display: inline-block;
+      margin-top: 15px;
+    }
     footer {
       background: #222;
       color: #eee;
@@ -54,38 +77,31 @@
   </header>
 
   <section class="hero">
-    <img src="https://images.unsplash.com/photo-1605478371364-0f82466d26ba" alt="Döner Wrap">
+    <img src="https://images.unsplash.com/photo-1619717436277-4f16b9d68b5e" alt="Turkish döner">
     <h1>Our Story</h1>
     <p>
-     
-  At Spincy, we believe food is more than fuel — it’s a shared experience, a memory in the making.
-  Our passion for chicken döner is rooted in the rich, diverse streets of Istanbul, where flavor brings people together across cultures and generations.
-  That same spirit lives here in Quincy, where we serve bold, fire-roasted chicken wraps crafted with care, warmth, and just the right spice.
-  <br><br>
-  Whether you’re grabbing a quick bite or sitting down with friends, we’re here to turn everyday meals into flavorful moments.
-  Because at Spincy, it’s not just about what’s on the plate — it’s about the feeling it brings.
-
+      At Spincy, we believe food is more than fuel — it’s a shared experience, a memory in the making.
+      Our passion for chicken döner is rooted in the rich, diverse streets of Istanbul, where flavor brings people together across cultures and generations.
+      That same spirit lives here in Quincy, where we serve bold, fire-roasted chicken wraps crafted with care, warmth, and just the right spice.
+      <br><br>
+      Whether you’re grabbing a quick bite or sitting down with friends, we’re here to turn everyday meals into flavorful moments.
+      Because at Spincy, it’s not just about what’s on the plate — it’s about the feeling it brings.
     </p>
   </section>
 
-<section class="hero" style="background-color: #fdf4f4; padding-top: 0;">
-  <h1>Our Mission</h1>
-  <p>
-    At Spincy, our mission goes beyond serving great food — we want to nourish our community in every sense.
-    Inspired by the Turkish tradition of <strong>"askıda ekmek"</strong>, we’ve launched the <strong>“Wrap It Forward”</strong> program:
-    a simple way for customers to donate a meal for someone in need.
-    <br><br>
-    Whether you donate $1 or cover an entire wrap, your kindness goes directly to feeding someone who could use a warm, delicious meal.
-    <br><br>
-    Because at Spincy, we believe food is a human right — and when we share it, we bring hope, dignity, and connection.
-  </p>
-  <br>
-  <a href="#" style="background-color: #e12c2c; color: white; padding: 12px 25px; text-decoration: none; border-radius: 6px; display: inline-block; margin-top: 15px;">
-    Donate a Meal
-  </a>
-</section>
-
-
+  <section class="mission">
+    <h1>Our Mission</h1>
+    <p>
+      At Spincy, our mission goes beyond serving great food — we want to nourish our community in every sense.
+      Inspired by the Turkish tradition of <strong>"askıda ekmek"</strong>, we’ve launched the <strong>“Wrap It Forward”</strong> program:
+      a simple way for customers to donate a meal for someone in need.
+      <br><br>
+      Whether you donate $1 or cover an entire wrap, your kindness goes directly to feeding someone who could use a warm, delicious meal.
+      <br><br>
+      Because at Spincy, we believe food is a human right — and when we share it, we bring hope, dignity, and connection.
+    </p>
+    <a href="#">Donate a Meal</a>
+  </section>
 
   <footer>
     © 2025 Spincy Quincy. All rights reserved.
