--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
   </header>
 
   <section class="hero">
-    <img src="https://images.unsplash.com/photo-1619717436277-4f16b9d68b5e" alt="Turkish döner">
+ <img src="https://cdn.pixabay.com/photo/2017/01/30/13/50/kebab-2029724_1280.jpg" alt="Turkish döner wrap">
+
     <h1>Our Story</h1>
     <p>
       At Spincy, we believe food is more than fuel — it’s a shared experience, a memory in the making.
