Fix: changed image URL to Wikimedia versionFix: changed image URL to Wikimedia versionFix: changed image URL to Wikimedia version

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
   </header>
 
   <section class="hero">
- <img src="https://cdn.pixabay.com/photo/2017/01/30/13/50/kebab-2029724_1280.jpg" alt="Turkish döner wrap">
+ <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/D%C3%B6ner_kebab_served_in_Stuttgart.jpg/800px-D%C3%B6ner_kebab_served_in_Stuttgart.jpg" alt="Doner Kebab in Bread">
+
 
     <h1>Our Story</h1>
     <p>
