--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
   </header>
 
   <section class="hero">
- <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/D%C3%B6ner_kebab_served_in_Stuttgart.jpg/800px-D%C3%B6ner_kebab_served_in_Stuttgart.jpg" alt="Doner Kebab in Bread">
+ <img src="https://placekitten.com/800/400" alt="Test image">
+
 
 
     <h1>Our Story</h1>
