--- a/index.html
+++ b/index.html
@@ -18,38 +18,28 @@
       padding: 30px 20px;
       text-align: center;
     }
-    .hero {
+    .hero, .mission {
       padding: 40px 20px;
       text-align: center;
     }
     .hero img {
-      max-width: 100%;
+      width: 100%;
+      max-width: 800px;
       height: auto;
       border-radius: 10px;
       margin-bottom: 20px;
     }
-    .hero h1 {
+    .hero h1, .mission h1 {
       font-size: 2.5em;
       margin-bottom: 10px;
     }
-    .hero p {
+    .hero p, .mission p {
       font-size: 1.2em;
       max-width: 800px;
       margin: 0 auto;
     }
     .mission {
       background-color: #fdf4f4;
-      padding: 40px 20px;
-      text-align: center;
-    }
-    .mission h1 {
-      font-size: 2.3em;
-      margin-bottom: 10px;
-    }
-    .mission p {
-      font-size: 1.1em;
-      max-width: 800px;
-      margin: 0 auto;
     }
     .mission a {
       background-color: #e12c2c;
@@ -77,10 +67,7 @@
   </header>
 
   <section class="hero">
- <img src="https://placekitten.com/800/400" alt="Test image">
-
-
-
+    <img src="https://placekitten.com/800/400" alt="Doner test image">
     <h1>Our Story</h1>
     <p>
       At Spincy, we believe food is more than fuel — it’s a shared experience, a memory in the making.
