--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
   </header>
 
   <section class="hero">
-    <img src="https://placekitten.com/800/400" alt="Doner test image">
+<img src="hoagie.jpg" alt="Delicious Doner ">
+
     <h1>Our Story</h1>
     <p>
       At Spincy, we believe food is more than fuel — it’s a shared experience, a memory in the making.
