--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
     <p>Authentic Chicken Döner (Gyro) – Fresh, Fast, Flavorful.</p>
   </header>
 
-  <section class="hero">
-<img src="hoagie.jpg" alt="Delicious Doner ">
-
-    <h1>Our Story</h1>
-    <p>
+<section class="hero" style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; gap: 30px; max-width: 1200px; margin: 0 auto; padding: 40px 20px;">
+  <img src="doner.jpg" alt="Doner wrap" style="flex: 1; max-width: 500px; border-radius: 12px;">
+  <div style="flex: 1; min-width: 300px;">
+    <h1 style="font-size: 2.5em; margin-bottom: 10px;">Our Story</h1>
+    <p style="font-size: 1.1em; line-height: 1.6;">
       At Spincy, we believe food is more than fuel — it’s a shared experience, a memory in the making.
       Our passion for chicken döner is rooted in the rich, diverse streets of Istanbul, where flavor brings people together across cultures and generations.
       That same spirit lives here in Quincy, where we serve bold, fire-roasted chicken wraps crafted with care, warmth, and just the right spice.
@@ -78,7 +78,9 @@
       Whether you’re grabbing a quick bite or sitting down with friends, we’re here to turn everyday meals into flavorful moments.
       Because at Spincy, it’s not just about what’s on the plate — it’s about the feeling it brings.
     </p>
-  </section>
+  </div>
+</section>
+
 
   <section class="mission">
     <h1>Our Mission</h1>
