--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </header>
 
 <section class="hero" style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; gap: 30px; max-width: 1200px; margin: 0 auto; padding: 40px 20px;">
-  <img src="doner.jpg" alt="Doner wrap" style="flex: 1; max-width: 500px; border-radius: 12px;">
+  <img src="hoagie.jpg" alt="Doner wrap" style="flex: 1; max-width: 500px; border-radius: 12px;">
   <div style="flex: 1; min-width: 300px;">
     <h1 style="font-size: 2.5em; margin-bottom: 10px;">Our Story</h1>
     <p style="font-size: 1.1em; line-height: 1.6;">
