--- a/index.html
+++ b/index.html
@@ -60,13 +60,23 @@
   </style>
 </head>
 <body>
+  <nav style="background:#e12c2c; padding: 15px 20px; display:flex; justify-content:center; gap: 30px; font-size: 1.1em; font-weight: bold;">
+  <a href="#home" style="color:white; text-decoration:none;">Home</a>
+  <a href="#about" style="color:white; text-decoration:none;">About</a>
+  <a href="#menu" style="color:white; text-decoration:none;">Menu</a>
+  <a href="#mission" style="color:white; text-decoration:none;">Mission</a>
+  <a href="#contact" style="color:white; text-decoration:none;">Contact</a>
+</nav>
 
-  <header>
-    <h1>Welcome to Spincy</h1>
+
+  <header id="home">
+
+    <h1>Spincy</h1>
     <p>Authentic Chicken Döner (Gyro) – Fresh, Fast, Flavorful.</p>
   </header>
 
-<section class="hero" style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; gap: 30px; max-width: 1200px; margin: 0 auto; padding: 40px 20px;">
+<section id="about" class="hero" style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center; gap: 30px; max-width: 1200px; margin: 0 auto; padding: 40px 20px;">
+
   <img src="hoagie.jpg" alt="Doner wrap" style="flex: 1; max-width: 500px; border-radius: 12px;">
   <div style="flex: 1; min-width: 300px;">
     <h1 style="font-size: 2.5em; margin-bottom: 10px;">Our Story</h1>
