--- a/index.html
+++ b/index.html
@@ -60,13 +60,22 @@
   </style>
 </head>
 <body>
-  <nav style="background:#e12c2c; padding: 15px 20px; display:flex; justify-content:center; gap: 30px; font-size: 1.1em; font-weight: bold;">
-  <a href="#home" style="color:white; text-decoration:none;">Home</a>
-  <a href="#about" style="color:white; text-decoration:none;">About</a>
-  <a href="#menu" style="color:white; text-decoration:none;">Menu</a>
-  <a href="#mission" style="color:white; text-decoration:none;">Mission</a>
-  <a href="#contact" style="color:white; text-decoration:none;">Contact</a>
+<nav style="background:#e12c2c; padding: 15px 30px; display:flex; justify-content:space-between; align-items:center;">
+  <!-- Logo + Name -->
+  <div style="color:white; font-size: 1.4em; font-weight: bold;">
+    Spincy
+  </div>
+
+  <!-- Navigation Links -->
+  <div style="display:flex; gap: 25px; font-size: 1.1em; font-weight: bold;">
+    <a href="#home" style="color:white; text-decoration:none;">Home</a>
+    <a href="#about" style="color:white; text-decoration:none;">About</a>
+    <a href="#menu" style="color:white; text-decoration:none;">Menu</a>
+    <a href="#mission" style="color:white; text-decoration:none;">Mission</a>
+    <a href="#contact" style="color:white; text-decoration:none;">Contact</a>
+  </div>
 </nav>
+
 
 
   <header id="home">
