--- a/index.html
+++ b/index.html
@@ -114,6 +114,40 @@
     </p>
     <a href="#">Donate a Meal</a>
   </section>
+<section id="menu" style="padding: 40px 20px; background-color: #fff3ea; text-align: center;">
+  <h1 style="font-size: 2.5em; margin-bottom: 30px;">Our Menu</h1>
+  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 30px; max-width: 1000px; margin: 0 auto;">
+
+    <!-- Regular Wrap -->
+    <div style="flex: 1; min-width: 250px; background: white; border-radius: 10px; padding: 20px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+      <h2>Regular Spincy Wrap</h2>
+      <p>~3.5 oz chicken + toppings</p>
+      <p style="font-weight: bold;">$6.99</p>
+    </div>
+
+    <!-- Medium Wrap -->
+    <div style="flex: 1; min-width: 250px; background: white; border-radius: 10px; padding: 20px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+      <h2>Medium Spincy Wrap</h2>
+      <p>~5.3 oz chicken + toppings</p>
+      <p style="font-weight: bold;">$8.49</p>
+    </div>
+
+    <!-- Large Wrap -->
+    <div style="flex: 1; min-width: 250px; background: white; border-radius: 10px; padding: 20px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+      <h2>Large Spincy Wrap</h2>
+      <p>~7 oz chicken + toppings</p>
+      <p style="font-weight: bold;">$9.99</p>
+    </div>
+
+    <!-- XL Wrap -->
+    <div style="flex: 1; min-width: 250px; background: white; border-radius: 10px; padding: 20px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+      <h2>XL Spincy Wrap</h2>
+      <p>~10.5 oz chicken (2 lavash, like Zurna)</p>
+      <p style="font-weight: bold;">$12.49</p>
+    </div>
+
+  </div>
+</section>
 
   <footer>
     © 2025 Spincy Quincy. All rights reserved.
