--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 
     <!-- Regular Wrap -->
     <div style="flex: 1; min-width: 250px; background: white; border-radius: 10px; padding: 20px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+     <img src="Wrap.jpg" alt="Regular wrap" style="width: 100%; border-radius: 8px; margin-bottom: 15px;">
       <h2>Regular Spincy Wrap</h2>
       <p>~3.5 oz chicken + toppings</p>
       <p style="font-weight: bold;">$6.99</p>
@@ -127,6 +128,7 @@
 
     <!-- Medium Wrap -->
     <div style="flex: 1; min-width: 250px; background: white; border-radius: 10px; padding: 20px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+     <img src="Wrapp.jpg" alt="Medium wrap" style="width: 100%; border-radius: 8px; margin-bottom: 15px;">   
       <h2>Medium Spincy Wrap</h2>
       <p>~5.3 oz chicken + toppings</p>
       <p style="font-weight: bold;">$8.49</p>
@@ -134,13 +136,15 @@
 
     <!-- Large Wrap -->
     <div style="flex: 1; min-width: 250px; background: white; border-radius: 10px; padding: 20px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+     <img src="Wrapp.jpg" alt="Large wrap" style="width: 100%; border-radius: 8px; margin-bottom: 15px;"> 
       <h2>Large Spincy Wrap</h2>
       <p>~7 oz chicken + toppings</p>
       <p style="font-weight: bold;">$9.99</p>
     </div>
 
-    <!-- XL Wrap -->
+    <!-- Bazooka Wrap -->
     <div style="flex: 1; min-width: 250px; background: white; border-radius: 10px; padding: 20px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+    <img src="zurna.webp" alt="Bazooka wrap" style="width: 100%; border-radius: 8px; margin-bottom: 15px;"> 
       <h2>XL Spincy Wrap</h2>
       <p>~10.5 oz chicken (2 lavash, like Zurna)</p>
       <p style="font-weight: bold;">$12.49</p>
