--- a/index.html
+++ b/index.html
@@ -114,44 +114,63 @@
     </p>
     <a href="#">Donate a Meal</a>
   </section>
-<section id="menu" style="padding: 40px 20px; background-color: #fff3ea; text-align: center;">
-  <h1 style="font-size: 2.5em; margin-bottom: 30px;">Our Menu</h1>
-  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 30px; max-width: 1000px; margin: 0 auto;">
+<section id="menu" style="padding: 40px 20px; background-color: #fff3ea;">
+  <h1 style="text-align: center; font-size: 2.5em; margin-bottom: 30px;">Our Menu</h1>
 
-    <!-- Regular Wrap -->
-    <div style="flex: 1; min-width: 250px; background: white; border-radius: 10px; padding: 20px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
-     <img src="Wrap.jpg" alt="Regular wrap" style="width: 100%; border-radius: 8px; margin-bottom: 15px;">
-      <h2>Regular Spincy Wrap</h2>
-      <p>~4 oz chicken + toppings</p>
-      <p style="font-weight: bold;">$6.99</p>
-    </div>
+  <!-- 🥙 Spincy Wraps -->
+  <h2 style="margin-top: 40px;">Spincy Wrapcy</h2>
+  <div style="display: flex; flex-wrap: wrap; gap: 30px; margin-top: 15px;">
 
-    <!-- Medium Wrap -->
-    <div style="flex: 1; min-width: 250px; background: white; border-radius: 10px; padding: 20px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
-     <img src="Wrapp.png" alt="Medium wrap" style="width: 100%; border-radius: 8px; margin-bottom: 15px;">   
-      <h2>Medium Spincy Wrap</h2>
-      <p>~6 oz chicken + toppings</p>
+    <div style="flex: 1; min-width: 250px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+      <img src="wrap.jpg" alt="Regular wrap" style="width: 100%; border-radius: 8px; margin-bottom: 15px;">
+      <h3>Regular Wrap</h3>
+      <p>~4 oz Spincy Wrap + toppings</p>
       <p style="font-weight: bold;">$8.99</p>
     </div>
 
-    <!-- Large Wrap -->
-    <div style="flex: 1; min-width: 250px; background: white; border-radius: 10px; padding: 20px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
-     <img src="Wrapp.png" alt="Large wrap" style="width: 100%; border-radius: 8px; margin-bottom: 15px;"> 
-      <h2>Large Spincy Wrap</h2>
-      <p>~7 oz chicken + toppings</p>
-      <p style="font-weight: bold;">$9.99</p>
-    </div>
-
-    <!-- Bazooka Wrap -->
-    <div style="flex: 1; min-width: 250px; background: white; border-radius: 10px; padding: 20px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
-    <img src="zurna.webp" alt="Bazooka wrap" style="width: 100%; border-radius: 8px; margin-bottom: 15px;"> 
-      <h2>XL Spincy Wrap</h2>
-      <p>~10.5 oz chicken (2 lavash, like Zurna)</p>
-      <p style="font-weight: bold;">$14.99</p>
+    <div style="flex: 1; min-width: 250px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+      <img src="zurna.webp" alt="Bazooka" style="width: 100%; border-radius: 8px; margin-bottom: 15px;">
+      <h3>XL Wrap</h3>
+      <p>~12 oz Bazoooka</p>
+      <p style="font-weight: bold;">$16.99</p>
     </div>
 
   </div>
+
+  <!-- 🍞 Spincy Breadcy -->
+  <h2 style="margin-top: 50px;">Spincy Breadcy</h2>
+  <div style="display: flex; flex-wrap: wrap; gap: 30px; margin-top: 15px;">
+    <div style="flex: 1; min-width: 250px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+      <img src="breadcy.jpg" alt="Breadcy" style="width: 100%; border-radius: 8px; margin-bottom: 15px;">
+      <h3>Toasted Chicken Breadcy</h3>
+      <p>On soft Italian-style bread with toppings</p>
+      <p style="font-weight: bold;">$8.99</p>
+    </div>
+  </div>
+
+  <!-- 🍟 Sides -->
+  <h2 style="margin-top: 50px;">Sides</h2>
+  <div style="display: flex; flex-wrap: wrap; gap: 30px; margin-top: 15px;">
+    <div style="flex: 1; min-width: 250px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+      <img src="fries.jpg" alt="Fries" style="width: 100%; border-radius: 8px; margin-bottom: 15px;">
+      <h3>French Fries</h3>
+      <p>Crispy fries just like McDonald's</p>
+      <p style="font-weight: bold;">$3.49</p>
+    </div>
+  </div>
+
+  <!-- 🥤 Drinks -->
+  <h2 style="margin-top: 50px;">Drinks</h2>
+  <div style="display: flex; flex-wrap: wrap; gap: 30px; margin-top: 15px;">
+    <div style="flex: 1; min-width: 250px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+      <img src="fountain-drink.jpg" alt="Drinks" style="width: 100%; border-radius: 8px; margin-bottom: 15px;">
+      <h3>Fountain Drinks</h3>
+      <p>Pepsi, Diet Pepsi, Mountain Dew, Lemonade</p>
+      <p style="font-weight: bold;">$1.99</p>
+    </div>
+  </div>
 </section>
+
 
   <footer>
     © 2025 Spincy Quincy. All rights reserved.
