--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   <div style="display: flex; flex-wrap: wrap; gap: 30px; margin-top: 15px;">
 
     <div style="flex: 1; min-width: 250px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
-      <img src="wrap.jpg" alt="Regular wrap" style="width: 100%; border-radius: 8px; margin-bottom: 15px;">
+      <img src="Wrap.jpg" alt="Regular wrap" style="width: 100%; border-radius: 8px; margin-bottom: 15px;">
       <h3>Regular Wrap</h3>
       <p>~4 oz Spincy Wrap + toppings</p>
       <p style="font-weight: bold;">$8.99</p>
@@ -130,7 +130,7 @@
 
     <div style="flex: 1; min-width: 250px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
       <img src="zurna.webp" alt="Bazooka" style="width: 100%; border-radius: 8px; margin-bottom: 15px;">
-      <h3>XL Wrap</h3>
+      <h3>Mega Wrap</h3>
       <p>~12 oz Bazoooka</p>
       <p style="font-weight: bold;">$16.99</p>
     </div>
