--- a/index.html
+++ b/index.html
@@ -170,7 +170,13 @@
     </div>
   </div>
 </section>
-
+<div style="text-align: center; margin-top: 50px;">
+  <a href="https://spincy.square.site/?location_id=L8X4J77NK1D66&fulfillment=PICKUP#SJQE67I7CMQIBSSKUR5HZKNC"
+     target="_blank"
+     style="background:#e12c2c; color:white; padding: 15px 30px; font-size: 1.2em; border-radius: 8px; text-decoration: none;">
+    👉 View Full Menu & Order on Square
+  </a>
+</div>
 
   <footer>
     © 2025 Spincy Quincy. All rights reserved.
