--- a/index.html
+++ b/index.html
@@ -117,66 +117,17 @@
 <section id="menu" style="padding: 40px 20px; background-color: #fff3ea;">
   <h1 style="text-align: center; font-size: 2.5em; margin-bottom: 30px;">Our Menu</h1>
 
-  <!-- 🥙 Spincy Wraps -->
-  <h2 style="margin-top: 40px;">Spincy Wrapcy</h2>
-  <div style="display: flex; flex-wrap: wrap; gap: 30px; margin-top: 15px;">
+  <p style="text-align: center; font-size: 1.1em; color: #444;">
+    View our full menu, select items, and place orders directly from our Square store.
+  </p>
 
-    <div style="flex: 1; min-width: 250px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
-      <img src="Wrap.jpg" alt="Regular wrap" style="width: 100%; border-radius: 8px; margin-bottom: 15px;">
-      <h3>Regular Wrap</h3>
-      <p>~4 oz Spincy Wrap + toppings</p>
-      <p style="font-weight: bold;">$8.99</p>
-    </div>
-
-    <div style="flex: 1; min-width: 250px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
-      <img src="zurna.webp" alt="Bazooka" style="width: 100%; border-radius: 8px; margin-bottom: 15px;">
-      <h3>Mega Wrap</h3>
-      <p>~12 oz Bazoooka</p>
-      <p style="font-weight: bold;">$16.99</p>
-    </div>
-
-  </div>
-
-  <!-- 🍞 Spincy Breadcy -->
-  <h2 style="margin-top: 50px;">Spincy Breadcy</h2>
-  <div style="display: flex; flex-wrap: wrap; gap: 30px; margin-top: 15px;">
-    <div style="flex: 1; min-width: 250px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
-      <img src="breadcy.jpg" alt="Breadcy" style="width: 100%; border-radius: 8px; margin-bottom: 15px;">
-      <h3>Toasted Chicken Breadcy</h3>
-      <p>On soft Italian-style bread with toppings</p>
-      <p style="font-weight: bold;">$8.99</p>
-    </div>
-  </div>
-
-  <!-- 🍟 Sides -->
-  <h2 style="margin-top: 50px;">Sides</h2>
-  <div style="display: flex; flex-wrap: wrap; gap: 30px; margin-top: 15px;">
-    <div style="flex: 1; min-width: 250px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
-      <img src="fries.jpg" alt="Fries" style="width: 100%; border-radius: 8px; margin-bottom: 15px;">
-      <h3>French Fries</h3>
-      <p>Crispy fries just like McDonald's</p>
-      <p style="font-weight: bold;">$3.49</p>
-    </div>
-  </div>
-
-  <!-- 🥤 Drinks -->
-  <h2 style="margin-top: 50px;">Drinks</h2>
-  <div style="display: flex; flex-wrap: wrap; gap: 30px; margin-top: 15px;">
-    <div style="flex: 1; min-width: 250px; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
-      <img src="fountain-drink.jpg" alt="Drinks" style="width: 100%; border-radius: 8px; margin-bottom: 15px;">
-      <h3>Fountain Drinks</h3>
-      <p>Pepsi, Diet Pepsi, Mountain Dew, Lemonade</p>
-      <p style="font-weight: bold;">$1.99</p>
-    </div>
+  <div style="margin-top: 30px; display: flex; justify-content: center;">
+    <iframe 
+      src="https://spincy.square.site/?location_id=L8X4J77NK1D66&fulfillment=PICKUP#TJB2TK6DCT2U734O4NS3CVSE" 
+      style="width:100%; max-width: 1000px; height: 1200px; border: none; border-radius: 12px;">
+    </iframe>
   </div>
 </section>
-<div style="text-align: center; margin-top: 50px;">
-  <a href="https://spincy.square.site/?location_id=L8X4J77NK1D66&fulfillment=PICKUP#SJQE67I7CMQIBSSKUR5HZKNC"
-     target="_blank"
-     style="background:#e12c2c; color:white; padding: 15px 30px; font-size: 1.2em; border-radius: 8px; text-decoration: none;">
-    👉 View Full Menu & Order on Square
-  </a>
-</div>
 
   <footer>
     © 2025 Spincy Quincy. All rights reserved.
