--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
   <div style="display:flex; gap: 25px; font-size: 1.1em; font-weight: bold;">
     <a href="#home" style="color:white; text-decoration:none;">Home</a>
     <a href="#about" style="color:white; text-decoration:none;">About</a>
-    <a href="#menu" style="color:white; text-decoration:none;">Menu</a>
+    <a href="menu.html" style="color:white; text-decoration:none;">Menu</a>
+
     <a href="#mission" style="color:white; text-decoration:none;">Mission</a>
     <a href="#contact" style="color:white; text-decoration:none;">Contact</a>
   </div>
