--- a/index.html
+++ b/index.html
@@ -115,20 +115,14 @@
     </p>
     <a href="#">Donate a Meal</a>
   </section>
-<section id="menu" style="padding: 40px 20px; background-color: #fff3ea;">
-  <h1 style="text-align: center; font-size: 2.5em; margin-bottom: 30px;">Our Menu</h1>
 
-  <p style="text-align: center; font-size: 1.1em; color: #444;">
-    View our full menu, select items, and place orders directly from our Square store.
-  </p>
+  <!-- Floating See Menu Button -->
+<a href="menu.html" 
+   style="position: fixed; bottom: 20px; right: 20px; background: #e12c2c; color: white; padding: 14px 24px; border-radius: 50px; font-size: 1em; font-weight: bold; text-decoration: none; box-shadow: 0 4px 8px rgba(0,0,0,0.3); z-index: 999;">
+   📋 See Our Menu & Order 
+</a>
 
-  <div style="margin-top: 30px; display: flex; justify-content: center;">
-    <iframe 
-      src="https://spincy.square.site/?location_id=L8X4J77NK1D66&fulfillment=PICKUP#TJB2TK6DCT2U734O4NS3CVSE" 
-      style="width:100%; max-width: 1000px; height: 1200px; border: none; border-radius: 12px;">
-    </iframe>
-  </div>
-</section>
+
 
   <footer>
     © 2025 Spincy Quincy. All rights reserved.
