--- a/index.html
+++ b/index.html
@@ -100,6 +100,20 @@
     </p>
   </div>
 </section>
+<!-- 🥙 Catering Section -->
+<section id="catering" style="background: #fff0ea; padding: 60px 20px;">
+  <div style="max-width: 1000px; margin: 0 auto; text-align: center;">
+    <h2 style="font-size: 2.2em; margin-bottom: 20px;">We Cater Events!</h2>
+    <p style="font-size: 1.1em; max-width: 700px; margin: 0 auto 25px;">
+      Hosting a party, office lunch, or family gathering? Spincy offers fresh and flavorful catering options with our famous wraps and sides.
+      We customize each order to fit your event size and style — with pickup or delivery available!
+    </p>
+    <a href="#contact" 
+       style="background: #e12c2c; color: white; padding: 14px 30px; border-radius: 8px; text-decoration: none; font-size: 1.1em;">
+       📩 Contact Us for Catering
+    </a>
+  </div>
+</section>
 
 
   <section class="mission">
@@ -122,6 +136,21 @@
    📋 See Our Menu & Order 
 </a>
 
+<!-- 📞 Contact Section -->
+<section id="contact" style="background: #fffaf6; padding: 60px 20px;">
+  <h2 style="text-align: center; font-size: 2em; margin-bottom: 40px;">Get In Touch</h2>
+  
+  <div style="display: flex; flex-wrap: wrap; gap: 40px; justify-content: center; max-width: 1000px; margin: 0 auto;">
+    <div style="flex: 1; min-width: 280px; background: white; padding: 30px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+      <h3 style="color:#e12c2c;">📍 Visit Us</h3>
+      <p>104 N 6th Street, Quincy, IL</p>
+      <h3 style="color:#e12c2c;">📞 Call or Text</h3>
+      <p><a href="tel:+12175551234" style="color: #333; text-decoration: none;">(217) 555-1234</a></p>
+      <h3 style="color:#e12c2c;">📧 Email</h3>
+      <p><a href="mailto:spincyquincy@gmail.com" style="color: #333; text-decoration: none;">spincyquincy@gmail.com</a></p>
+    </div>
+  </div>
+</section>
 
 
   <footer>
