--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
     <a href="menu.html" style="color:white; text-decoration:none;">Menu</a>
 
     <a href="#mission" style="color:white; text-decoration:none;">Mission</a>
+    <a href="catering.html" style="color:white; text-decoration:none;">Catering</a>
+
     <a href="#contact" style="color:white; text-decoration:none;">Contact</a>
   </div>
 </nav>
