--- a/catering.html
+++ b/catering.html
@@ -64,13 +64,14 @@
       <a href="index.html#contact">Contact</a>
     </div>
   </nav>
+<div class="container" style="background: url('https://i.imgur.com/5jqfHXX.jpg') center/cover no-repeat; border-radius: 12px; padding: 60px 20px; box-shadow: 0 2px 12px rgba(0,0,0,0.2);">
+  <div style="background-color: rgba(255,255,255,0.92); padding: 40px 30px; border-radius: 10px;">
 
-  <div class="container">
     <h1>We Cater Events!</h1>
     <p>Bring the taste of Spincy to your next event — office lunch, birthday, family gathering, or community party. We provide delicious Spincy wraps, sides, and trays to match your group size.</p>
     <p>No fixed pricing — we tailor every order to your needs and budget. Reach out and let us help make your event flavorful and stress-free!</p>
     <a href="mailto:spincyquincy@gmail.com" class="cta-button">📩 Contact Us for Catering</a>
-    <p style="margin-top: 40px;">📞 Or call us at <strong>(217) 555-1234</strong></p>
+    <p style="margin-top: 40px;">📞 Or call us at <strong>(217)316-0755</strong></p>
   </div>
 
 </body>
