--- a/catering.html
+++ b/catering.html
@@ -69,7 +69,19 @@
 
     <h1>We Cater Events!</h1>
     <p>Bring the taste of Spincy to your next event — office lunch, birthday, family gathering, or community party. We provide delicious Spincy wraps, sides, and trays to match your group size.</p>
-    <p>No fixed pricing — we tailor every order to your needs and budget. Reach out and let us help make your event flavorful and stress-free!</p>
+    <form action="<form action="https://formspree.io/f/abc123xy" method="POST" style="margin-top: 30px; max-width: 600px; margin-left: auto; margin-right: auto;">
+  <input type="text" name="name" placeholder="Your Name" required style="width: 100%; padding: 12px; margin-bottom: 15px; border-radius: 6px; border: 1px solid #ccc;">
+  <input type="email" name="email" placeholder="Your Email" required style="width: 100%; padding: 12px; margin-bottom: 15px; border-radius: 6px; border: 1px solid #ccc;">
+  <textarea name="message" placeholder="Tell us about your event..." required style="width: 100%; padding: 12px; height: 120px; border-radius: 6px; border: 1px solid #ccc; margin-bottom: 15px;"></textarea>
+  <button type="submit" style="background: #e12c2c; color: white; padding: 14px 30px; border: none; border-radius: 6px; font-size: 1em;">📩 Send Request</button>
+</form>
+" method="POST" style="margin-top: 30px; max-width: 600px; margin-left: auto; margin-right: auto;">
+  <input type="text" name="name" placeholder="Your Name" required style="width: 100%; padding: 12px; margin-bottom: 15px; border-radius: 6px; border: 1px solid #ccc;">
+  <input type="email" name="email" placeholder="Your Email" required style="width: 100%; padding: 12px; margin-bottom: 15px; border-radius: 6px; border: 1px solid #ccc;">
+  <textarea name="message" placeholder="Tell us about your event..." required style="width: 100%; padding: 12px; height: 120px; border-radius: 6px; border: 1px solid #ccc; margin-bottom: 15px;"></textarea>
+  <button type="submit" style="background: #e12c2c; color: white; padding: 14px 30px; border: none; border-radius: 6px; font-size: 1em;">📩 Send Request</button>
+</form>
+<p>No fixed pricing — we tailor every order to your needs and budget. Reach out and let us help make your event flavorful and stress-free!</p>
     <a href="mailto:spincyquincy@gmail.com" class="cta-button">📩 Contact Us for Catering</a>
     <p style="margin-top: 40px;">📞 Or call us at <strong>(217)316-0755</strong></p>
   </div>
