--- a/catering.html
+++ b/catering.html
@@ -27,7 +27,15 @@
     .container {
       max-width: 900px;
       margin: 60px auto;
-      padding: 0 20px;
+      background: url('https://images.unsplash.com/photo-1606788075761-1f618df7d4db?auto=format&fit=crop&w=1170&q=80') center/cover no-repeat;
+      border-radius: 12px;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.2);
+      padding: 60px 20px;
+    }
+    .content-box {
+      background-color: rgba(255,255,255,0.92);
+      padding: 40px 30px;
+      border-radius: 10px;
       text-align: center;
     }
     h1 {
@@ -50,6 +58,29 @@
       font-size: 1.1em;
       margin-top: 25px;
     }
+    form {
+      margin-top: 30px;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    input, textarea {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 15px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      font-size: 1em;
+    }
+    button {
+      background: #e12c2c;
+      color: white;
+      padding: 14px 30px;
+      border: none;
+      border-radius: 6px;
+      font-size: 1em;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -64,26 +95,23 @@
       <a href="index.html#contact">Contact</a>
     </div>
   </nav>
-<div class="container" style="background: url('https://i.imgur.com/5jqfHXX.jpg') center/cover no-repeat; border-radius: 12px; padding: 60px 20px; box-shadow: 0 2px 12px rgba(0,0,0,0.2);">
-  <div style="background-color: rgba(255,255,255,0.92); padding: 40px 30px; border-radius: 10px;">
 
-    <h1>We Cater Events!</h1>
-    <p>Bring the taste of Spincy to your next event — office lunch, birthday, family gathering, or community party. We provide delicious Spincy wraps, sides, and trays to match your group size.</p>
-    <form action="<form action="https://formspree.io/f/abc123xy" method="POST" style="margin-top: 30px; max-width: 600px; margin-left: auto; margin-right: auto;">
-  <input type="text" name="name" placeholder="Your Name" required style="width: 100%; padding: 12px; margin-bottom: 15px; border-radius: 6px; border: 1px solid #ccc;">
-  <input type="email" name="email" placeholder="Your Email" required style="width: 100%; padding: 12px; margin-bottom: 15px; border-radius: 6px; border: 1px solid #ccc;">
-  <textarea name="message" placeholder="Tell us about your event..." required style="width: 100%; padding: 12px; height: 120px; border-radius: 6px; border: 1px solid #ccc; margin-bottom: 15px;"></textarea>
-  <button type="submit" style="background: #e12c2c; color: white; padding: 14px 30px; border: none; border-radius: 6px; font-size: 1em;">📩 Send Request</button>
-</form>
-" method="POST" style="margin-top: 30px; max-width: 600px; margin-left: auto; margin-right: auto;">
-  <input type="text" name="name" placeholder="Your Name" required style="width: 100%; padding: 12px; margin-bottom: 15px; border-radius: 6px; border: 1px solid #ccc;">
-  <input type="email" name="email" placeholder="Your Email" required style="width: 100%; padding: 12px; margin-bottom: 15px; border-radius: 6px; border: 1px solid #ccc;">
-  <textarea name="message" placeholder="Tell us about your event..." required style="width: 100%; padding: 12px; height: 120px; border-radius: 6px; border: 1px solid #ccc; margin-bottom: 15px;"></textarea>
-  <button type="submit" style="background: #e12c2c; color: white; padding: 14px 30px; border: none; border-radius: 6px; font-size: 1em;">📩 Send Request</button>
-</form>
-<p>No fixed pricing — we tailor every order to your needs and budget. Reach out and let us help make your event flavorful and stress-free!</p>
-    <a href="mailto:spincyquincy@gmail.com" class="cta-button">📩 Contact Us for Catering</a>
-    <p style="margin-top: 40px;">📞 Or call us at <strong>(217)316-0755</strong></p>
+  <div class="container">
+    <div class="content-box">
+      <h1>We Cater Events!</h1>
+      <p>Bring the taste of Spincy to your next event — office lunch, birthday, family gathering, or community party.</p>
+      <p>No fixed pricing — we tailor every order to your needs and budget. Reach out and let us help make your event flavorful and stress-free!</p>
+
+      <form action="https://formspree.io/f/mvgrqepy" method="POST">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <textarea name="message" placeholder="Tell us about your event..." required></textarea>
+        <button type="submit">📩 Send Request</button>
+      </form>
+
+      <p style="margin-top: 30px;">📧 Or email us directly: <a href="mailto:spincyquincy@gmail.com">spincyquincy@gmail.com</a></p>
+      <p>📞 Call us at <strong>(217) 316-0755</strong></p>
+    </div>
   </div>
 
 </body>
