--- a/index.html
+++ b/index.html
@@ -60,11 +60,14 @@
   </style>
 </head>
 <body>
-<nav style="background:#e12c2c; padding: 15px 30px; display:flex; justify-content:space-between; align-items:center;">
+<nav style="background:white; padding: 15px 30px; display:flex; justify-content:space-between; align-items:center;">
+
   <!-- Logo + Name -->
-  <div style="color:white; font-size: 1.4em; font-weight: bold;">
-    Spincy
-  </div>
+  <a href="index.html" style="display:flex; align-items:center; gap:10px; text-decoration:none;">
+  <img src="spincy-logo.png" alt="Spincy Logo" style="height:50px;">
+  <span style="font-weight:bold; font-size:1.4em; color:#e12c2c;">Spincy</span>
+</a>
+
 
   <!-- Navigation Links -->
   <div style="display:flex; gap: 25px; font-size: 1.1em; font-weight: bold;">
