--- a/index.html
+++ b/index.html
@@ -62,25 +62,20 @@
 <body>
 <nav style="background:white; padding: 15px 30px; display:flex; justify-content:space-between; align-items:center;">
 
-  <!-- Logo + Name -->
+<nav style="background:white; position: sticky; top: 0; z-index: 999; padding: 15px 30px; display:flex; justify-content:space-between; align-items:center; border-bottom:1px solid #eee;">
   <a href="index.html" style="display:flex; align-items:center; gap:10px; text-decoration:none;">
-  <img src="spincy logo.png" alt="Spincy Logo" style="height:250px;">
-  <span style="font-weight:bold; font-size:1.4em; color:#e12c2c;">Spincy</span>
-</a>
-
-
-  <!-- Navigation Links -->
+    <img src="spincy logo.png" alt="Spincy Logo" style="height:200px;">
+    <span style="font-weight:bold; font-size:1.4em; color:#e12c2c;">Spincy</span>
+  </a>
   <div style="display:flex; gap: 25px; font-size: 1.1em; font-weight: bold;">
-    <a href="#home" style="color:white; text-decoration:none;">Home</a>
-    <a href="#about" style="color:white; text-decoration:none;">About</a>
-    <a href="menu.html" style="color:white; text-decoration:none;">Menu</a>
-
-    <a href="#mission" style="color:white; text-decoration:none;">Mission</a>
-    <a href="catering.html" style="color:white; text-decoration:none;">Catering</a>
-
-    <a href="#contact" style="color:white; text-decoration:none;">Contact</a>
+    <a href="index.html#home" style="color:#e12c2c; text-decoration:none;">Home</a>
+    <a href="index.html#about" style="color:#e12c2c; text-decoration:none;">About</a>
+    <a href="menu.html" style="color:#e12c2c; text-decoration:none;">Menu</a>
+    <a href="catering.html" style="color:#e12c2c; text-decoration:none;">Catering</a>
+    <a href="index.html#contact" style="color:#e12c2c; text-decoration:none;">Contact</a>
   </div>
 </nav>
+
 
 
 
