--- a/index.html
+++ b/index.html
@@ -61,20 +61,21 @@
 </head>
 <body>
 <nav style="background:white; padding: 15px 30px; display:flex; justify-content:space-between; align-items:center;">
-
 <nav style="background:white; position: sticky; top: 0; z-index: 999; padding: 15px 30px; display:flex; justify-content:space-between; align-items:center; border-bottom:1px solid #eee;">
-  <a href="index.html" style="display:flex; align-items:center; gap:10px; text-decoration:none;">
+  <a href="/" style="display:flex; align-items:center; gap:10px; text-decoration:none;">
     <img src="spincy logo.png" alt="Spincy Logo" style="height:200px;">
     <span style="font-weight:bold; font-size:1.4em; color:#e12c2c;">Spincy</span>
   </a>
   <div style="display:flex; gap: 25px; font-size: 1.1em; font-weight: bold;">
-    <a href="index.html#home" style="color:#e12c2c; text-decoration:none;">Home</a>
-    <a href="index.html#about" style="color:#e12c2c; text-decoration:none;">About</a>
+    <a href="/#home" style="color:#e12c2c; text-decoration:none;">Home</a>
+    <a href="/#about" style="color:#e12c2c; text-decoration:none;">About</a>
     <a href="menu.html" style="color:#e12c2c; text-decoration:none;">Menu</a>
     <a href="catering.html" style="color:#e12c2c; text-decoration:none;">Catering</a>
-    <a href="index.html#contact" style="color:#e12c2c; text-decoration:none;">Contact</a>
+    <a href="/#contact" style="color:#e12c2c; text-decoration:none;">Contact</a>
   </div>
 </nav>
+
+
 
 
 
